amaroK ChangeLog
================
(c) 2002-2004 the amaroK authors.


  * fix: amaroK showing the "X" icon instead of the correct one

VERSION 0.9:
  * chg: playlistBrowser removed until next release
  * fix: playerWidget font is now configurable, you need to start new track for the
         scrolling marquee to get updated. Default font is used by default.
  * fix: fixed several stability issues concerning stream-playback
  * add: whatsthis for all configurable options.
  * fix: amaroK registering with dcop as "amarok-PID". it's back to just "amarok" now.
  * fix: OSD not updating correctly when changing volume

VERSION 0.9-beta3:
  * add: "Show Current Track" button in playlist.
  * add: Volume OSD when changing with mousewheel over trayicon.
  * chg: software volume mixer uses a logarithmic function to make the scale more natural
  * add: Global shortcuts to display OSD and increase/decrease volume.
         (Win+o and Win+KP_Add/KP_Subtract by default, respectively)
  * add: DCOP calls to control OSD and playback volume
  * add: ported config-GUI for audio decoders to new engine (works currently with
         modplug_artsplugin)
  * fix: show correct track-length when playing .mod or .sid with aRts-engine
  * add: loader application, starts and controls amaroK. it reduces the lag when handing
         command line arguments to amaroK and makes the splash load faster
  * add: playlist items, which couldn't be opened / read (for some reason) will be marked 
         with a grey background color
  * add: pasting clipboard selection into playlist with MidButton, X11-style  
  * chg: refined on-screen-display with more polished look
  * fix: skipping broken/non-existant tracks
  * chg: If the current song is paused, the Play Button will resume, not restart it.
  * fix: respect "hide playlist with main window" and playlist minimize/hide behaviour.
  * add: new OSD configuration options: bgcolor, screen position

VERSION 0.9-beta2: