@@ -3,6 +3,7 @@ amaroK ChangeLog
 (c) 2002-2004 the amaroK authors.
 
 
+  * fix: startup notification icon staying on screen when amaroK started by loader
   * fix: amaroK showing the "X" icon instead of the correct one
 
 VERSION 0.9:
